Corrigindo o rastreamento de arquivos do git (.env)

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SENHA_SECRETA='raimundo albenes sorvetao'
+SENHA_SECRETA='raimundo albenes'
 CLOUDINARY_URL=cloudinary://374624723761547:qPHLZYGhxuBKDbYMjdvP62PqBC4@duswwe9rm
